// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Policy Directive Tests LowerCase on object, policy on field, stub on parent query (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "bar",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests LowerCase on object, policy on field, stub on parent query (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "exception": {
        "code": "INTERNAL_SERVER_ERROR"
      }
    }
  ],
  "data": {}
}
`;

exports[`Policy Directive Tests LowerCase, policy on object, stub on parent query (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "bar",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests LowerCase, policy on object, stub on parent query (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "exception": {
        "code": "INTERNAL_SERVER_ERROR"
      }
    }
  ],
  "data": {}
}
`;

exports[`Policy Directive Tests Mock, policy on object, stub on parent query (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "BAR: 1",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Mock, policy on object, stub on parent query (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "exception": {
        "code": "INTERNAL_SERVER_ERROR"
      }
    }
  ],
  "data": {}
}
`;

exports[`Policy Directive Tests Policy on field, resolver on object (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "BAR",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Policy on field, resolver on object (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "exception": {
        "code": "INTERNAL_SERVER_ERROR"
      }
    }
  ],
  "data": {}
}
`;

exports[`Policy Directive Tests Policy on field, stub on parent query (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "BAR",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Policy on field, stub on parent query (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "exception": {
        "code": "INTERNAL_SERVER_ERROR"
      }
    }
  ],
  "data": {}
}
`;

exports[`Policy Directive Tests Policy on object, stub on field (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "BAR",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Policy on object, stub on field (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "exception": {
        "code": "INTERNAL_SERVER_ERROR"
      }
    }
  ],
  "data": {}
}
`;

exports[`Policy Directive Tests Policy on object, stub on parent query (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "BAR",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Policy, lowerCase on object, stub on parent query (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "bar",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Policy, lowerCase on object, stub on parent query (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "exception": {
        "code": "INTERNAL_SERVER_ERROR"
      }
    }
  ],
  "data": {}
}
`;

exports[`Policy Directive Tests Policy, stub on field (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "BAR",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Policy, stub on field (DENY) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "BAR",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Policy, stub on parent query (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "exception": {
        "code": "INTERNAL_SERVER_ERROR"
      }
    }
  ],
  "data": {}
}
`;

exports[`Policy Directive Tests Stub, lowerCase, policy on field (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "bar",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Stub, lowerCase, policy on field (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "exception": {
        "code": "INTERNAL_SERVER_ERROR"
      }
    }
  ],
  "data": {}
}
`;

exports[`Policy Directive Tests Stub, policy on field (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "BAR",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Stub, policy on field (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "exception": {
        "code": "INTERNAL_SERVER_ERROR"
      }
    }
  ],
  "data": {}
}
`;

exports[`Policy Directive Tests Stub, policy, lowerCase on field (ALLOW) 1`] = `
Object {
  "data": Object {
    "foo": Object {
      "bar": "bar",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Policy Directive Tests Stub, policy, lowerCase on field (DENY) 1`] = `
{
  "errors": [
    {
      "name": "GraphQLError",
      "message": "Error",
      "exception": {
        "code": "INTERNAL_SERVER_ERROR"
      }
    }
  ],
  "data": {}
}
`;
